# routes/orders.route.js
@@ -5,7 +5,7 @@ const auth = require('../middlewares/auth.middleware');
 const hasRole = require('../middlewares/hasRole.middleware');
 
 router.get('/', auth, getOrders);
-router.post('/', auth, hasRole(['customer', 'reception']), createOrder);
+router.post('/', auth, hasRole(['customer', 'reception', 'admin']), createOrder);
 router.put('/:id/status', auth, updateOrderStatus);
 
 module.exports = router;
