# swagger.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 
 servers:
-  - url: http://localhost:3030
+  - url: https://wacdo.mathisdeplanque.fr
 
 paths:
   /users:
@@ -234,3 +234,437 @@ paths:
                 properties:
                   message:
                     type: string
+  /products:
+    get:
+      tags:
+        - Produits
+      summary: Retourne la liste des produits
+      responses:
+        "200":
+          description: Un tableau JSON des produits
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    price:
+                      type: number
+                    products:
+                      type: array
+                      items:
+                        type: object
+                    tags:
+                      type: array
+                      items:
+                        type: string
+                    image:
+                      type: string
+    post:
+      tags:
+        - Produits
+      security:
+        - bearerAuth: []
+      summary: Crée un nouveau produit
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                products:
+                  type: array
+                  items:
+                    type: string
+                tags:
+                  type: array
+                  items:
+                    type: string
+                image:
+                  type: string
+                  format: binary
+              required:
+                - name
+                - price
+      responses:
+        "200":
+          description: Le nouveau produit créé
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  price:
+                    type: number
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  tags:
+                    type: array
+                    items:
+                      type: string
+                  image:
+                    type: string
+  /products/{productId}:
+    put:
+      tags:
+        - Produits
+      security:
+        - bearerAuth: []
+      summary: Met à jour un produit existant
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                products:
+                  type: array
+                  items:
+                    type: string
+                tags:
+                  type: array
+                  items:
+                    type: string
+                image:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: Le produit mis à jour
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  price:
+                    type: number
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  tags:
+                    type: array
+                    items:
+                      type: string
+                  image:
+                    type: string
+  /menus:
+    get:
+      tags:
+        - Menus
+      summary: Retourne la liste des menus
+      responses:
+        "200":
+          description: Un tableau JSON des menus
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    price:
+                      type: number
+                    products:
+                      type: array
+                      items:
+                        type: object
+                    tags:
+                      type: array
+                      items:
+                        type: string
+                    image:
+                      type: string
+    post:
+      tags:
+        - Menus
+      security:
+        - bearerAuth: []
+      summary: Crée un nouveau menu
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                products:
+                  type: array
+                  items:
+                    type: string
+                tags:
+                  type: array
+                  items:
+                    type: string
+                image:
+                  type: string
+                  format: binary
+              required:
+                - name
+                - price
+      responses:
+        "200":
+          description: Le nouveau menu créé
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  price:
+                    type: number
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  tags:
+                    type: array
+                    items:
+                      type: string
+                  image:
+                    type: string
+  /menus/{menuId}:
+    put:
+      tags:
+        - Menus
+      security:
+        - bearerAuth: []
+      summary: Met à jour un menu existant
+      parameters:
+        - name: menuId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                products:
+                  type: array
+                  items:
+                    type: string
+                tags:
+                  type: array
+                  items:
+                    type: string
+                image:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: Le menu mis à jour
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  price:
+                    type: number
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  tags:
+                    type: array
+                    items:
+                      type: string
+                  image:
+                    type: string
+  /orders:
+    get:
+      tags:
+        - Commandes
+      security:
+        - bearerAuth: []
+      summary: Retourne la liste des commandes
+      responses:
+        "200":
+          description: Un tableau JSON des commandes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    products:
+                      type: array
+                      items:
+                        type: object
+                    menus:
+                      type: array
+                      items:
+                        type: object
+                    status:
+                      type: string
+                    customer:
+                      type: object
+    post:
+      tags:
+        - Commandes
+      security:
+        - bearerAuth: []
+      summary: Crée une nouvelle commande
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                products:
+                  type: array
+                  items:
+                    type: string
+                menus:
+                  type: array
+                  items:
+                    type: string
+                status:
+                  type: string
+                customer:
+                  type: string
+              required:
+                - customer
+      responses:
+        "200":
+          description: La nouvelle commande créée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  menus:
+                    type: array
+                    items:
+                      type: object
+                  status:
+                    type: string
+                  customer:
+                    type: object
+  /orders/{orderId}/status:
+    put:
+      tags:
+        - Commandes
+      security:
+        - bearerAuth: []
+      summary: Met à jour le statut d'une commande existante
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: string
+      responses:
+        "200":
+          description: La commande mise à jour
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                  products:
+                    type: array
+                    items:
+                      type: object
+                  menus:
+                    type: array
+                    items:
+                      type: object
+                  status:
+                    type: string
+                  customer:
+                    type: object
